<resources>
    <string name="app_name">LabsCM20172</string>
    <string name="search">Buscar</string>
    <string name="txtusuario">Usuario</string>
    <string name="txtpassword">Contraseña</string>
    <string name="btningresar">Ingresar</string>
    <string name="actualizar">Actualizar</string>
    <string name="salir">Salir</string>
    <string name="config">Configuracion</string>
    <string name="registrar">Registrar</string>
    <string name="ok_register">Registro Exitoso</string>
    <string name="erro_register">Registro No Exitoso</string>
    <string name="field_required">Este campo es requerido</string>
    <string name="field_incorrect">Email o contraseña incorrecta</string>
    <string name="confirmarConstraseña">Confirmar contraseña</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="genero">Genero</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="ciudad">Ciudad</string>
    <string name="enviarRegistro">Enviar Registro</string>
    <string name="invalid_mail">El correo no es válido</string>
    <string name="pass_no_equals">Las contraseñas no coinciden</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="info">Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mensaje_edicion">Se ha modificado el registro</string>


    <string-array name="cities_array">
        <item>Leticia</item>
        <item>Medellin</item>
        <item>Arauca</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
        <item>Tunja</item>
        <item>Manizales</item>
        <item>Florencia</item>
        <item>Yopal</item>
        <item>Popayan</item>
        <item>Valledupar</item>
        <item>Quibdo</item>
        <item>Monteria</item>
        <item>Bogota</item>
        <item>Puerto Inirida</item>
        <item>San Jose del Guaviare</item>
        <item>Neiva</item>
        <item>Riohacha</item>
        <item>Santa Marta</item>
        <item>Villavicencio</item>
        <item>Pasto</item>
        <item>Cúcuta</item>
        <item>Mocoa</item>
        <item>Armenia</item>
        <item>Pereira</item>
        <item>Santa Catalina</item>
        <item>Bucaramanga</item>
        <item>Sincelejo</item>
        <item>Ibague</item>
        <item>Cali</item>
        <item>Mitu</item>
        <item>Puerto Carreño</item>
    </string-array>

    <string name="notification">Notificaciones</string>
    <string name="apartments">Apartamentos</string>
    <string name="about">Acerca de ...</string>
    <string name="nombreApartamento">Nombre </string>
    <string name="tipo">Tipo</string>
    <string name="descripcion">Descripcion</string>
    <string name="area">Area</string>
    <string name="valor">Valor</string>
    <string name="agregar">Agregar</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="view">Ver en mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Ubication</string>


    ---------
    <string name="rb_sesion">Mantener sesion iniciada</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Configuración</string>
    <string name="preferencesSesion">Manterner sesion</string>
    <string name="preferencesSesionDescription">Active esta opción para mantener la sesión iniciada</string>
    <string name="action_search">Buscar</string>

    <string name="not_login_google">No ha sido posible loguearse</string>
    <string name="facebook_app_id">285443365300482</string>
    <string name="fb_login_protocol_scheme">fb285443365300482</string>

    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>

    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>

    <string name="logout">Cerrar sesión</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>

</resources>
