<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Login"
    android:foregroundGravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="50dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/ic_user"
                android:background="@mipmap/ic_logo"/>

            <TextView
                android:id="@+id/textLogin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Inicia sesión con email"
                android:textColor="@color/cardview_dark_background"
                android:textSize="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/txtLoginEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="E-mail"
                    android:textColorHint="@color/background"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/background"
                    android:textSize="18sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtpassword"
                    android:textColorHint="@color/background"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/background"
                    android:textSize="18sp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">


                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btningresar"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/btnregistrar"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/registrar"
                    android:onClick="register"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textLogin2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Inicia sesión con social"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"/>

                <com.google.android.gms.common.SignInButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:id="@+id/signinGoogle">

                </com.google.android.gms.common.SignInButton>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/signinFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>